--- a/src/style.css
+++ b/src/style.css
@@ -21,10 +21,20 @@
 html, body {
   margin: 0;
   padding: 0;
-  height: 100%;
 }
 
-h1, h2 {
+body {
+  min-height: 100vh;
+  display: flex;
+  place-items: center;
+}
+
+#app {
+  max-width: 780px;
+  margin: 0 auto;
+}
+
+h1, h2, h3 {
   font-size: 1.1rem;
   font-weight: 500;
   color: #191716;
@@ -45,89 +55,46 @@ a {
 }
 
 a:hover {
+  text-decoration-color: #a3e635;
   text-decoration-line: underline;
-  text-decoration-thickness: 1px;
+  text-decoration-thickness: 2px;
   text-underline-offset: 0.15em;
 }
 
-/*          HEADER         */
-
 header {
-  padding: 25px 35px;
-  border-bottom: 1px solid #EEEEEE;
+  height: 140px;
+  padding: 20px 40px;
 }
 
-.wrapper-header {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  max-width: 650px;
-  margin: 0 auto;
-}
-
-.content {
+.wrapper {
+  height: 100%;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  height: 160px;
 }
 
-.content-top p {
-  margin: 0;
-}
-
-.content-bottom {
-  display: flex;
-  flex-wrap: wrap;
-  gap: 5px;
-}
-
-.link-telegram,
-.link-email {
+.link {
   display: flex;
   align-items: center;
   gap: 10px;
 }
 
-.image img {
-  border-radius: 50%;
-  object-fit: cover;
-  width: 136px;
+.telegram,
+.email,
+.github {
+  display: flex;
+  align-items: center;
+  gap: 5px;
 }
 
-@media (width < 425px) {
-  .image img {
-    width: 100px;
-  }
-
-  .content {
-    height: 186px;
-  }
+span {
+  display: block;
+  padding: 10px;
+  border-bottom: 2px solid #EEEEEE;
 }
-
-.logo {
-  will-change: filter;
-  transition: filter 300ms;
-  cursor: pointer;
-}
-/*
-.logo:hover {
-  filter: drop-shadow(0 0 1em #7d7d7daa);
-} */
-
-/*          MAIN         */
 
 main {
-  padding: 25px 35px;
-}
-
-.wrapper-main {
-  max-width: 650px;
-  margin: 0 auto;
-}
-
-.portfolio {
-  margin: 25px 0;
+  padding: 20px 40px;
 }
 
 ul {
@@ -142,13 +109,6 @@ ul li {
   gap: 20px;
 }
 
-
 footer {
-  border-top: 1px solid #EEEEEE;
-  padding: 25px 35px;
-}
-
-.wrapper-footer {
-  max-width: 650px;
-  margin: 0 auto;
+  padding: 0 40px;
 }
